--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-mysqli": "*",
+        "egulias/email-validator": "^4.0",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
